@startuml

scale 350 width
[*] --> NoWord
NoWord --> Word: Letter
NoWord --> NoWord: Other
Word --> NoWord: Other; counter++
Word --> Word: Letter
Word --> Tag: <
NoWord --> Tag: <
Tag --> NoWord: >
Tag --> Tag: Other
Tag --> AltText: "
AltText --> Tag: "
AltText --> AltText: other
AltText --> Backslash_Alttext: \\
Backslash_Alttext --> AltText
@enduml